// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should invert CSS colour when the \`inverse\` prop is set 1`] = `
.emotion-0 {
  color: #ffffff;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 600;
  font-size: 3.6rem;
  line-height: 1.2222222222222223;
}

.Nautilus-List + .emotion-0,
.Nautilus-Paragraph + .emotion-0,
dl + .emotion-0 {
  margin-top: 3.2rem;
}

<h2
  class="emotion-0"
>
  Inverted heading
</h2>
`;

exports[`Heading should output large CSS when the \`level\` prop is 2 1`] = `
.emotion-0 {
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 600;
  font-size: 3.6rem;
  line-height: 1.2222222222222223;
}

.Nautilus-List + .emotion-0,
.Nautilus-Paragraph + .emotion-0,
dl + .emotion-0 {
  margin-top: 3.2rem;
}

<h2
  class="emotion-0"
>
  Big heading
</h2>
`;

exports[`Heading should output medium CSS when the \`level\` prop is 3 1`] = `
.emotion-0 {
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 600;
  font-size: 3.1rem;
  line-height: 1.2903225806451613;
}

.Nautilus-List + .emotion-0,
.Nautilus-Paragraph + .emotion-0,
dl + .emotion-0 {
  margin-top: 3.2rem;
}

<h3
  class="emotion-0"
>
  So-so heading
</h3>
`;

exports[`Heading should output small CSS when the \`level\` prop is 4 1`] = `
.emotion-0 {
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 600;
  font-size: 2.7rem;
  line-height: 1.3333333333333333;
}

.Nautilus-List + .emotion-0,
.Nautilus-Paragraph + .emotion-0,
dl + .emotion-0 {
  margin-top: 3.2rem;
}

<h4
  class="emotion-0"
>
  Tiny heading
</h4>
`;
